pyarmor.bug.log
[BUG]: invalid syntax (<frozen processor>, line 4)

## Command Line
/home/pilot/Desktop/work/pustigai_v2/venv/bin/pyarmor gen --output src/obfuscated/ processor.py

## Environments
Python 3.12.3
Pyarmor 9.1.6 (trial), 000000, non-profits
Platform linux.x86_64
Native linux.x86_64
Home /home/pilot/.pyarmor

## Traceback
Traceback (most recent call last):
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/__main__.py", line 793, in main
    main_entry(sys.argv[1:])
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/__main__.py", line 786, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/__main__.py", line 248, in cmd_gen
    builder.process(options)
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/generate.py", line 188, in process
    self._obfuscate_scripts()
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/generate.py", line 144, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/core/__init__.py", line 95, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 715, in generate_obfuscated_script
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 515, in process
  File "/home/pilot/Desktop/work/pustigai_v2/venv/lib/python3.12/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen processor>", line 4
    from datetime importdatetime
                  ^^^^^^^^^^^^^^
SyntaxError: invalid syntax


